--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -27,20 +27,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.11/site-packages (1.5.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/pheltweg/Library/Python/3.11/lib/python/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/site-packages (from pandas) (2022.7.1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/site-packages (from pandas) (1.24.2)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/pheltweg/Library/Python/3.11/lib/python/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Requirement already satisfied: pandas in /Users/macjanine/opt/anaconda3/envs/janine/lib/python3.9/site-packages (1.4.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/macjanine/opt/anaconda3/envs/janine/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/macjanine/opt/anaconda3/envs/janine/lib/python3.9/site-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in /Users/macjanine/opt/anaconda3/envs/janine/lib/python3.9/site-packages (from pandas) (1.21.5)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/macjanine/opt/anaconda3/envs/janine/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: SQLAlchemy==1.4.46 in /usr/local/lib/python3.11/site-packages (1.4.46)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/site-packages (from SQLAlchemy==1.4.46) (2.0.2)\n",
+      "Collecting SQLAlchemy==1.4.46\n",
+      "  Downloading SQLAlchemy-1.4.46.tar.gz (8.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: greenlet!=0.4.17 in /Users/macjanine/opt/anaconda3/envs/janine/lib/python3.9/site-packages (from SQLAlchemy==1.4.46) (1.1.1)\n",
+      "Building wheels for collected packages: SQLAlchemy\n",
+      "  Building wheel for SQLAlchemy (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for SQLAlchemy: filename=SQLAlchemy-1.4.46-cp39-cp39-macosx_10_9_x86_64.whl size=1559998 sha256=bc8330ec377715c95ea8f4c270053d2f40769a73548ff4ed2916888e79eb2c56\n",
+      "  Stored in directory: /Users/macjanine/Library/Caches/pip/wheels/2e/7a/c5/c4adc0fde658e83ef6ece76c8a7f115fc378c85774d9e5fd42\n",
+      "Successfully built SQLAlchemy\n",
+      "Installing collected packages: SQLAlchemy\n",
+      "  Attempting uninstall: SQLAlchemy\n",
+      "    Found existing installation: SQLAlchemy 1.4.39\n",
+      "    Uninstalling SQLAlchemy-1.4.39:\n",
+      "      Successfully uninstalled SQLAlchemy-1.4.39\n",
+      "Successfully installed SQLAlchemy-1.4.46\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -296,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +342,7 @@
        "array(['neu', None], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
