--- a/project/data_exploration.ipynb
+++ b/project/data_exploration.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -756,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -789,39 +798,406 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>8000001</td>\n",
-       "      <td>29.05.2023, 22:09</td>\n",
-       "      <td>29.05.2023, 21:39</td>\n",
+       "      <td>31.05.2023, 17:45</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8000001</td>\n",
-       "      <td>29.05.2023, 22:09</td>\n",
-       "      <td>29.05.2023, 21:39</td>\n",
+       "      <td>31.05.2023, 20:21</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8000001</td>\n",
-       "      <td>29.05.2023, 22:09</td>\n",
-       "      <td>29.05.2023, 21:39</td>\n",
+       "      <td>31.05.2023, 18:37</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8000001</td>\n",
+       "      <td>31.05.2023, 18:37</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8000001</td>\n",
+       "      <td>31.05.2023, 19:23</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25468</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>31.05.2023, 11:08</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25469</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>31.05.2023, 10:41</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25470</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>31.05.2023, 10:31</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25471</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>31.05.2023, 10:08</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25472</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>31.05.2023, 09:07</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>25473 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       eva                 ct                 pt\n",
-       "0  8000001  29.05.2023, 22:09  29.05.2023, 21:39\n",
-       "1  8000001  29.05.2023, 22:09  29.05.2023, 21:39\n",
-       "2  8000001  29.05.2023, 22:09  29.05.2023, 21:39"
+       "           eva                 ct    pt\n",
+       "0      8000001  31.05.2023, 17:45  None\n",
+       "1      8000001  31.05.2023, 20:21  None\n",
+       "2      8000001  31.05.2023, 18:37  None\n",
+       "3      8000001  31.05.2023, 18:37  None\n",
+       "4      8000001  31.05.2023, 19:23  None\n",
+       "...        ...                ...   ...\n",
+       "25468  8004623  31.05.2023, 11:08  None\n",
+       "25469  8004623  31.05.2023, 10:41  None\n",
+       "25470  8004623  31.05.2023, 10:31  None\n",
+       "25471  8004623  31.05.2023, 10:08  None\n",
+       "25472  8004623  31.05.2023, 09:07  None\n",
+       "\n",
+       "[25473 rows x 3 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timetables= pd.read_sql_table('timetables3005','sqlite:///data/amse.sqlite')\n",
+    "timetables= pd.read_sql_table('timetables3105','sqlite:///data/amse.sqlite')\n",
+    "timetables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eva</th>\n",
+       "      <th>ct</th>\n",
+       "      <th>pt</th>\n",
+       "      <th>delay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>8000010</td>\n",
+       "      <td>2023-05-31 15:04:00</td>\n",
+       "      <td>2023-05-31 14:33:00</td>\n",
+       "      <td>0 days 00:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>461</th>\n",
+       "      <td>8000013</td>\n",
+       "      <td>2023-05-31 18:04:00</td>\n",
+       "      <td>2023-05-31 17:22:00</td>\n",
+       "      <td>0 days 00:42:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>462</th>\n",
+       "      <td>8000013</td>\n",
+       "      <td>2023-05-31 20:57:00</td>\n",
+       "      <td>2023-05-31 20:55:00</td>\n",
+       "      <td>0 days 00:02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>523</th>\n",
+       "      <td>8000013</td>\n",
+       "      <td>2023-05-31 16:20:00</td>\n",
+       "      <td>2023-05-31 15:41:00</td>\n",
+       "      <td>0 days 00:39:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>532</th>\n",
+       "      <td>8000013</td>\n",
+       "      <td>2023-05-31 14:25:00</td>\n",
+       "      <td>2023-05-31 14:24:00</td>\n",
+       "      <td>0 days 00:01:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25360</th>\n",
+       "      <td>8010397</td>\n",
+       "      <td>2023-05-31 14:39:00</td>\n",
+       "      <td>2023-05-31 13:32:00</td>\n",
+       "      <td>0 days 01:07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25382</th>\n",
+       "      <td>8010397</td>\n",
+       "      <td>2023-05-31 13:08:00</td>\n",
+       "      <td>2023-05-31 12:32:00</td>\n",
+       "      <td>0 days 00:36:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25396</th>\n",
+       "      <td>8010397</td>\n",
+       "      <td>2023-05-31 12:23:00</td>\n",
+       "      <td>2023-05-31 11:32:00</td>\n",
+       "      <td>0 days 00:51:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25398</th>\n",
+       "      <td>8010397</td>\n",
+       "      <td>2023-05-31 12:07:00</td>\n",
+       "      <td>2023-05-31 09:32:00</td>\n",
+       "      <td>0 days 02:35:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25416</th>\n",
+       "      <td>8010397</td>\n",
+       "      <td>2023-05-31 09:32:00</td>\n",
+       "      <td>2023-05-31 08:32:00</td>\n",
+       "      <td>0 days 01:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>955 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           eva                  ct                  pt           delay\n",
+       "349    8000010 2023-05-31 15:04:00 2023-05-31 14:33:00 0 days 00:31:00\n",
+       "461    8000013 2023-05-31 18:04:00 2023-05-31 17:22:00 0 days 00:42:00\n",
+       "462    8000013 2023-05-31 20:57:00 2023-05-31 20:55:00 0 days 00:02:00\n",
+       "523    8000013 2023-05-31 16:20:00 2023-05-31 15:41:00 0 days 00:39:00\n",
+       "532    8000013 2023-05-31 14:25:00 2023-05-31 14:24:00 0 days 00:01:00\n",
+       "...        ...                 ...                 ...             ...\n",
+       "25360  8010397 2023-05-31 14:39:00 2023-05-31 13:32:00 0 days 01:07:00\n",
+       "25382  8010397 2023-05-31 13:08:00 2023-05-31 12:32:00 0 days 00:36:00\n",
+       "25396  8010397 2023-05-31 12:23:00 2023-05-31 11:32:00 0 days 00:51:00\n",
+       "25398  8010397 2023-05-31 12:07:00 2023-05-31 09:32:00 0 days 02:35:00\n",
+       "25416  8010397 2023-05-31 09:32:00 2023-05-31 08:32:00 0 days 01:00:00\n",
+       "\n",
+       "[955 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#timetables=timetables.dropna(timetables['pt'])\n",
+    "timetables = timetables[timetables['pt'].notna()]\n",
+    "timetables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "137"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timetables['ct'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eva</th>\n",
+       "      <th>ct</th>\n",
+       "      <th>pt</th>\n",
+       "      <th>delay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8000001</td>\n",
+       "      <td>2023-05-31 17:45:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8000001</td>\n",
+       "      <td>2023-05-31 20:21:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8000001</td>\n",
+       "      <td>2023-05-31 18:37:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8000001</td>\n",
+       "      <td>2023-05-31 18:37:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8000001</td>\n",
+       "      <td>2023-05-31 19:23:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25468</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>2023-05-31 11:08:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25469</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>2023-05-31 10:41:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25470</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>2023-05-31 10:31:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25471</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>2023-05-31 10:08:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25472</th>\n",
+       "      <td>8004623</td>\n",
+       "      <td>2023-05-31 09:07:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25473 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           eva                  ct  pt delay\n",
+       "0      8000001 2023-05-31 17:45:00 NaT   NaT\n",
+       "1      8000001 2023-05-31 20:21:00 NaT   NaT\n",
+       "2      8000001 2023-05-31 18:37:00 NaT   NaT\n",
+       "3      8000001 2023-05-31 18:37:00 NaT   NaT\n",
+       "4      8000001 2023-05-31 19:23:00 NaT   NaT\n",
+       "...        ...                 ...  ..   ...\n",
+       "25468  8004623 2023-05-31 11:08:00 NaT   NaT\n",
+       "25469  8004623 2023-05-31 10:41:00 NaT   NaT\n",
+       "25470  8004623 2023-05-31 10:31:00 NaT   NaT\n",
+       "25471  8004623 2023-05-31 10:08:00 NaT   NaT\n",
+       "25472  8004623 2023-05-31 09:07:00 NaT   NaT\n",
+       "\n",
+       "[25473 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timetables['ct'] = pd.to_datetime(timetables['ct'])\n",
+    "timetables['pt'] = pd.to_datetime(timetables['pt'])\n",
+    "\n",
+    "timetables['delay']=timetables['ct']-timetables['pt'] \n",
     "timetables"
    ]
   },
