test if report is shown

--- a/project/test.ipynb
+++ b/project/test.ipynb
@@ -980,7 +980,7 @@
     "\n",
     "In addition, it has to be considered that there are other causes of the train delayes. Even during the past week with really good weather, delays still occured. Signal failures, technical issues, accidents causing emergency services on the tracks, and staff-related factors, such as illness or waiting for staff from other trains, can all independently contribute to delays. Additionally, delays can propagate, creating a cascading effect.\n",
     "\n",
-    "While the correlation between weather and train delays could not be fully established, it is clear that multiple causes influence the DB train timetables."
+    "While the correlation between weather and train delays could not be fully established, it is clear that multiple causes influence the DB train timetables.\n"
    ]
   }
  ],
