test notebook view

--- a/project/test.ipynb
+++ b/project/test.ipynb
@@ -398,7 +398,7 @@
     }
    ],
    "source": [
-    "pio.renderers.default = \"iframe\"\n",
+    "pio.renderers.default = \"notebok\"\n",
     "\n",
     "fig = px.scatter_mapbox(timetables, lat=\"latitude\", lon=\"longitude\", hover_name=\"name\", size='count',zoom=5,  animation_frame='date')\n",
     "\n",
